--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 services:
   cns:
-    restEndpoint: '${CERC_REGISTRY_REST_ENDPOINT:-http:/138.197.130.188:1317}'
-    gqlEndpoint: '${CERC_REGISTRY_GQL_ENDPOINT:-http://138.197.130.188:9473/api}'
-    chainId: ${CERC_REGISTRY_CHAIN_ID:-laconic_9000-1}
-    gas: 550000
-    fees: 200000aphoton
+    restEndpoint: '${CERC_REGISTRY_REST_ENDPOINT:-https://laconicd.laconic.com}'
+    gqlEndpoint: '${CERC_REGISTRY_GQL_ENDPOINT:-https://laconicd.laconic.com/api}'
+    chainId: laconic_9000-1
+    gas: 9950000
+    fees: 15000000alnt
